# netxms

./: .gitignore  configure.ac
include/: nms_agent.h  nms_common.h  nms_cscp.h  nms_threads.h  nms_util.h  nxcldefs.h  nxdbapi.h  uuid.h
sql/: Makefile.am  Makefile.msvc.w32  Makefile.w32  database.in  dbinit.in  metadata.in  policy.in  schema.in  schema_tsdb.in
src/agent/core/: actions.cpp  dbupgrade.cpp  localdb.cpp  master.cpp  nxagentd.cpp  nxagentd.h  policy.cpp  session.cpp
src/db/libnxdb/: session.cpp  util.cpp
src/flow_analyzer/: Makefile.am
src/flow_analyzer/libipfix/: Makefile.am  gettimeofday.c  ipfix_ssl.c  libipfix.h
src/flow_analyzer/nxflowd/: Makefile.am  collector.cpp  messages.c  nxflowd  nxflowd.cpp  nxflowd.h  winsrv.cpp
src/install/windows/: netxms-x64-minimal.iss  netxms-x64.iss
src/libnetxms/: Makefile.am  inetaddr.cpp  nxcp.cpp  stringlist.cpp  table.cpp  tp.cpp  unicode.cpp
src/server/core/: .cproject  Makefile.am  agent.cpp  agent_policy.cpp  ap_jobs.cpp  cluster.cpp  console.cpp  datacoll.cpp  dbwrite.cpp  dc_nxsl.cpp  dci_recalc.cpp  dcitem.cpp  dcithreshold.cpp  dcowner.cpp  dctable.cpp  dctarget.cpp  dctthreshold.cpp  epp.cpp  interface.cpp  loghandle.cpp  main.cpp  netobj.cpp  node.cpp  npe.cpp  nxsl_classes.cpp  objects.cpp  package.cpp  poll.cpp  ps.cpp  script.cpp  sensor.cpp  session.cpp  swpkg.cpp  syncer.cpp  template.cpp  tools.cpp
src/server/drivers/: Makefile.am
src/server/include/: Makefile.am  nms_core.h  nms_objects.h  nxcore_jobs.h  nxdbmgr_tools.h  nxsrvapi.h
tests/test-libnetxms/: test-libnetxms.cpp
(+205 files in other folders)
